# stdweb-alert-example

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/client/: mod.rs
src/server/: mod.rs
static/: index.html
